add comments; clean up warnings